[metadata]
name = dwopt
version = 0.0.3
author = 0xdomyz
author_email = septemberwhyms@google.com
description = Datawarehouse operator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/0xdomyz/dwopt
project_urls =
    Bug Tracker = https://github.com/0xdomyz/dwopt/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    =src
packages = find:
python_requires = ~=3.9
install_requires =
    sqlalchemy~=1.4.27
    psycopg2~=2.9.2
    cx_Oracle~=8.3.0
    pandas~=1.3.3
    numpy~=1.20.3
    keyring~=23.5.0

[options.packages.find]
where = src