[metadata]
name = dwopt
version = 0.0.5
author = 0xdomyz
author_email = septemberwhyms@gmail.com
description = Datawarehouse operator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/0xdomyz/dwopt
project_urls =
    Bug Tracker = https://github.com/0xdomyz/dwopt/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    =src
packages = find:
install_requires =
    sqlalchemy
    psycopg2
    cx_Oracle
    pandas
    numpy
    keyring

[options.packages.find]
where = src