[metadata]
name = dwopt
version = 0.0.8
author = 0xdomyz
author_email = septemberwhyms@gmail.com
description = Datawarehouse operator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/0xdomyz/dwopt
project_urls =
    Bug Tracker = https://github.com/0xdomyz/dwopt/issues
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux

[options]
package_dir =
    =src
packages = find:
install_requires =
    sqlalchemy
    # psycopg2
    # oracledb
    pandas
    keyring
    keyrings.alt

[options.packages.find]
where = src